--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-html{
+html {
   height: 100%;
 }
 
 body {
-  color: white;
+  color: #fff;
+  font-family: 'Merriweather Sans', sans-serif;
   height: 100%;
   position: relative;
   background-image: url("../images/band-it.jpg");
@@ -22,5 +23,47 @@ body {
 }
 
 .mainContent {
-  
+  width: 70%;
+}
+  .mainContent h1 {
+    font-family: 'Bungee Outline', cursive;
+    font-size: 4rem;
+    font-weight: 900;
+    padding-bottom: 1rem;
+  }
+  .mainContent p {
+    color: #ddd;
+    font-size: 1rem;
+    padding: 0 1rem;
+    margin-bottom: 2rem;
+  }
+
+.submitButton {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: #22b800;
+}
+
+@media (max-width: 767px) {
+
+body {
+  background-image: url("../images/band-it-thin.jpg");
+  background-size: cover;
+}
+
+.mainContent {
+  width: 90%;
+}
+
+.mainContent h1 {
+  font-size: 3rem;
+  padding-bottom: 0.5rem;
+}
+
+.mainContent p {
+  font-size: 0.8rem;
+  padding: 0;
+  margin-bottom: 1rem;
+}
+
 }
