--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ img {
 }
   .mainContent h1 {
     font-family: 'Bungee Outline', cursive;
+    color: white;
     font-size: 4rem;
     font-weight: 900;
     padding-bottom: 1rem;
@@ -67,6 +68,7 @@ body {
 }
 
 .mainContent h1 {
+  color: white;
   font-size: 3rem;
   padding-bottom: 0.5rem;
 }
