--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  color: #fff;
+  /* color: #fff; */
   font-family: 'Merriweather Sans', sans-serif;
   height: 100%;
   position: relative;
@@ -55,6 +55,19 @@ img {
     -ms-transition: background-color 400ms linear;
     transition: background-color 400ms linear;
   }
+
+.navbar {
+  z-index: 10;
+}
+
+#artistLocation {
+  color: white;
+}
+
+#artistMap {
+  width: 100%;
+  height: 500px;
+}
 
 @media (max-width: 767px) {
 
