--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,11 @@ body {
 #artistLocation {
   color: black;
 }
+.venuesList {
+  border: 1px solid rgba(0, 0, 0, 0.6);
+  height: 500px;
+  overflow: scroll;
+}
 
 #artistMap {
   width: 100%;
