--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,11 +73,14 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.6);
   height: 500px;
   overflow: scroll;
+
 }
 
 #artistMap {
   width: 100%;
   height: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.6);
+
 }
  .card {
   width: 100%
@@ -85,6 +88,11 @@ body {
 .yelpImage {
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
+}
+
+.yelpInfo {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
 }
 /* .card-columns {
   display: inline-block;
