--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,10 @@ body {
   color: white;
   background-color: rgba(0, 0, 0, 0.6);
 }
+  .nav-link h1 {
+    padding: 0;
+    margin: 0;
+  }
 
 #artistLocation {
   color: black;
