--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ body {
 .submitButton {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  background-color: #22b800;
+  background-color: #48a8b6;
 }
   .submitButton:hover {
     background-color: #222;
@@ -69,6 +69,13 @@ body {
     padding: 0;
     margin: 0;
   }
+#artistImage {
+  padding: 0;
+}
+
+#artistName {
+  background-color: #48a8b6;
+}
 
 #artistLocation {
   color: black;
