--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,12 @@ html {
   height: 100%;
 }
 
+body {
+  background-color: #48a8b6;
+  color: white;
+  padding-bottom: 30px;
+}
+
 .indexBody {
   /* color: #fff; */
   font-family: 'Merriweather Sans', sans-serif;
@@ -9,10 +15,6 @@ html {
   position: relative;
   background-image: url("../images/band-it.jpg");
   background-size: cover;
-}
-
-body {
-  color: black;
 }
 
 .logoImg {
@@ -74,23 +76,25 @@ body {
 }
 
 #artistName {
-  background-color: #48a8b6;
+  color: black;
+  background-color: white;
 }
 
 #artistLocation {
   color: black;
 }
 .venuesList {
-  border: 1px solid rgba(0, 0, 0, 0.6);
+  color: black;
   height: 500px;
   overflow: scroll;
+  padding-bottom: 10px;
+  background-color: white;
 
 }
 
 #artistMap {
   width: 100%;
   height: 500px;
-  border: 1px solid rgba(0, 0, 0, 0.6);
 
 }
  .card {
@@ -107,6 +111,11 @@ body {
 }
 #add1 {
   margin-bottom: 0;
+}
+
+#yelpResults {
+  padding: 0;
+  background-color: white;
 }
 /* .card-columns {
   display: inline-block;
