--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,6 @@ body {
 }
 
 .indexBody {
-  /* color: #fff; */
   font-family: 'Merriweather Sans', sans-serif;
   height: 100%;
   position: relative;
@@ -35,12 +34,18 @@ body {
 .mainContent {
   width: 70%;
 }
-  .mainContent h1 {
+  .indexBandIt {
     font-family: 'Bungee Outline', cursive;
     color: white;
     font-size: 4rem;
     font-weight: 900;
     padding-bottom: 1rem;
+  }
+  .resultsBandIt {
+    font-family: 'Bungee Outline', cursive;
+    font-size: 2.8rem;
+    color: white;
+    font-weight: 900;
   }
   .mainContent p {
     color: #ddd;
@@ -66,6 +71,9 @@ body {
   color: white;
   background-color: rgba(0, 0, 0, 0.6);
 }
+  .resultsLogo {
+    padding: 0 0 0 5px;
+  }
   .nav-link h1 {
     padding: 0;
     margin: 0;
@@ -97,9 +105,12 @@ body {
     background-color: #48a8b6;
     color: white;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 5px 5px;
     margin-bottom: 5px;
   }
+    .venue:hover {
+      cursor:pointer;
+    }
   .city {
     margin-bottom: 5px;
   }
@@ -127,7 +138,8 @@ body {
 
 #yelpResults {
   padding: 0;
-  background-color: white;
+  margin-top: 20px;
+  background-color: #48a8b6;
 }
 /* .card-columns {
   display: inline-block;
@@ -153,10 +165,12 @@ body {
   padding-bottom: 0.5rem;
 }
 
+
+
 .mainContent p {
   font-size: 0.8rem;
   padding: 0;
   margin-bottom: 1rem;
 }
-
+/* end of @media max-width: 767px */
 }
