--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,5 +220,9 @@ body {
  .card {
    margin-bottom: 0!important;
  }
+ .yelpInfo {
+   background-color: #fff;
+   color: #000;
+ }
  /* end of media for max width 575 */
 }
