--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,6 +167,14 @@ body {
   margin-bottom: .75rem;
 }
 
+.logoFooterLink {
+  padding-top: 30px;
+}
+
+.logoFooterLink img {
+  border: 3px solid rgba(0, 0, 0, 0.6);
+}
+
 @media (max-width: 767px) {
 
 .indexBody {
