got rid of extra padding on right of page by assignin w-100 to footer row

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ html {
 }
 
 .resultsBody {
+  width: 100%;
   background-image: url('../images/paisleyBg.png');
   background-position: center;
   padding-bottom: 30px;
@@ -19,6 +20,10 @@ html {
 
 .logoImg {
   border-radius: 50%;
+}
+
+.navbar-toggler-icon {
+  float: right;
 }
 
 
