--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,10 +138,6 @@ html {
   width: 100%;
 }
 
-.yelpInfo {
-  background-color: #f1feed;
-  color: #010101;
-}
 #add1 {
   margin-bottom: 0;
 }
@@ -170,7 +166,8 @@ html {
 }
 
 .yelpCard {
-  margin-bottom: .75rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
 }
 
 .logoFooterLink {
@@ -178,7 +175,7 @@ html {
 }
 
 .logoFooterLink img {
-  border: 3px solid rgba(0, 0, 0, 0.6);
+  border: 10px inset #b38600;
 }
 
 @media (max-width: 767px) {
