increased font size for heading on landing page and style get tix buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,11 @@ html {
     margin-bottom: 2rem;
   }
 
+#heading {
+  font-size: 56px;
+  font-weight: 900;
+}
+
 .submitButton {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -123,7 +128,7 @@ html {
     text-decoration: underline;
   }
   .venue {
-    background-color: #48a8b6;
+    background-color: #48a8b6!important;
     color: white;
     border-radius: 5px;
     padding: 5px 5px;
@@ -134,6 +139,14 @@ html {
     }
   .city {
     margin-bottom: 5px;
+  }
+  .date {
+    margin-bottom: 5px;
+  }
+  .getTix {
+    background-color: #48a8b6!important;
+    color: #fff!important;
+    padding: 4px 6px!important;
   }
 
 #artistMap {
