--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,9 +77,13 @@ html {
   /* overflow:auto */
 }
 #spotify{
-  width: 100%;
-  height: 100%;
+  text-align: center;
+  width: 60%;
+  height: 60%;
+  margin-top: 30px;
+  padding: 20px 30px;
 }
+
 .topTracks{
   width: 100%;
   height: 100%;
