--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,8 +78,8 @@ html {
 }
 #spotify{
   text-align: center;
-  width: 60%;
-  height: 60%;
+  width: 200px;
+  height: 80px;
   margin-top: 30px;
   padding: 20px 30px;
 }
